--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,13 +3,18 @@ body {
     background-color: #333652;
 }
 
+#connexion {
+    position: absolute;
+    right: 0.5%;
+}
+
 h1 {
     color: #90adc6;
     font-size: 3em;
 }
 
 a:link {
-    color: #7f38ae;
+    color: #9e5ec9;
 }
 
 a:visited {
