--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,8 +3,14 @@ body {
     background-color: #333652;
 }
 
+#subscribe {
+    position: absolute;
+    top: 0.5%;
+}
+
 #connexion {
     position: absolute;
+    top: 0.5%;
     right: 0.5%;
 }
 
@@ -21,13 +27,13 @@ a:visited {
     color: #c8df52;
 }
 
-header {
+#h1 {
     background-color: #e9eaec;
     margin-left: 20%;
     margin-right: 20%;
 }
 
-header p {
+#h1 p {
     color: #333652;
     font-size: 1.5em;
 }
