--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,6 +42,11 @@ h1, p, .news h3 {
     text-align: center;
 }
 
+.news span {
+    display: block;
+    text-align: center;
+}
+
 h3 {
     color: #FAD02C;
 }
@@ -81,4 +86,10 @@ h3 em {
 
 .firstP {
     color: #e9eaec;
+}
+
+#editor {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
 }
