Ajout fonctionnalité de modération de commentaire

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -93,6 +93,6 @@ h3 em {
     margin-right: auto;
 }
 
-#delete-confirmation {
+#delete-confirmation, .delete-confirmation, .editComment {
     display: none;
 }
