--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,98 +1,259 @@
-body {
+.truc {
     color: #E9EAEC;
+    color: #333652;
+    color: #90adc6;
+    color: #9e5ec9;
+    color: #c8df52;
+    color: #FAD02C;
+    color: #470ea8;
+    color: #222538;
+}
+
+@font-face { 
+    font-family: 'roboto';
+    src: url('../fonts/Roboto-Regular.ttf') format('truetype');
+}
+
+body {
     background-color: #333652;
+    position: relative;
+    color: #E9EAEC;
+    font-family: 'roboto', 'Helvetica', 'Arial', sans-serif;
 }
 
-#subscribe, #administration {
-    position: absolute;
-    top: 0.5%;
-}
-
-#connexion {
-    position: absolute;
-    top: 0.5%;
-    right: 0.5%;
+header {
+    width: 65%;
+    margin: auto;
+    text-align: center;
+    color: #333652d8;
+    background-color: #E9EAEC;
+    font-size: 1.9em;
+    border-radius: 0.2em;
 }
 
 h1 {
-    color: #90adc6;
-    font-size: 3em;
+    margin-top: 0.3em;
 }
 
-a:link {
-    color: #9e5ec9;
+a {
+    text-decoration: none;
 }
 
-a:visited {
-    color: #c8df52;
+nav {
+    position: absolute;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
-#h1 {
-    background-color: #e9eaec;
-    margin-left: 20%;
-    margin-right: 20%;
+nav a {
+    display: inline-flex;
+    background-color: #CF8851;
+    color: rgba(245, 245, 245, 0.966);
+    font-size: 0.9em;
+    margin: 0.8em 0;
+    border-radius: 0.2em;
+    justify-content: center;
+    align-items: center;
+    padding: 0.25em;
 }
 
-#h1 p {
-    color: #333652;
-    font-size: 1.5em;
-}
-
-h1, p, .news h3 {
+section {
+    width: 80%;
+    margin: auto;
     text-align: center;
 }
 
-#postAnnonce {
-    text-align: center;
+h2 {
+    color: #e9eaec;
 }
 
 h3 {
     color: #FAD02C;
+    font-size: 2em;
+    border-bottom: 0.05em solid #e9eaec;
+    margin: 1em auto;
+    width: 50%;
 }
 
-h3 em {
-    font-size: 0.5em;
-}
-.news {
-    padding-top: 2em;
+article {
+    margin: 4vw 0;
 }
 
-.news a:visited {
-    color: #470ea8;;
+article div {
+    color: #90adc6;
 }
 
-.news h3 {
-    font-size: 2.2em;
-}
-
-.news p {
-    color: #333652;
+article p {
     background-color: #e9eaec;
-    width: 75%;
-    margin-left: auto;
-    margin-right: auto;
+    color: #333652;
+    margin: 1.2vw auto;
+    padding: 1.6em;
+    border-radius: 0.5em;
+    box-shadow: 0em 0.15em 0.9em 0.1em rgba(46, 45, 45, 0.788);
+}
+
+.commentsLink, .editLink {
+    display: inline-flex;
+    background-color: rgb(233, 225, 230);
+    color: #253645;
+    border: 0.15em solid #C45F52;
+    border-radius: 0.4em;
+    align-items: center;
     padding: 0.5em;
-    text-align: left;
+    margin: 0 2em;
 }
 
-.commentaires {
-    font-size: 1.2em;
-    max-width: 60%;
-    margin: auto;
-    background-color: #222538;
+#pages a {
+    color: #90adc6;
+}
+
+.comments {
+    display: flex;
+    flex-direction: column;
+    width: 75%;
+    margin: 1.5em auto;
+}
+
+.commentTitle {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.commentAuthor {
     color: #FAD02C;
+    font-size: 1.5em;
+    margin-left: 1.2em;
 }
 
-.firstP {
-    color: #e9eaec;
+.commentDate {
+    color: #90adc6;
+    font-size: 0.9em;
+    margin-right: 1.2em;
+}
+
+.comments p {
+    background-color: #e9eaec;
+    color: #333652;
+    padding: 1vw;
+    border-radius: 0.3em;
+    text-align: initial;
+    margin-bottom: 0.5em;
+}
+
+.comments a {
+    display: inline-flex;
+    align-self: flex-end;
+    background-color: #f4f4f4e0;
+    color: rgb(21, 21, 21);
+    padding: 0.1em 0.4em;
+    border-radius: 0.2em;
+    font-size: 0.85em;
+}
+
+#newComment form {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    margin: auto;
+}
+
+#comment {
+    height: 8em;
+    margin: 1em 0;
+}
+
+#newComment form input {
+    width: 6em;
+    align-self: center;
+}
+
+#disconnexion, #disconnexion form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    height: 10vw;
+}
+
+.message {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+#adminShortcuts {
+    display: flex;
+    justify-content: center;
+    width: 75%;
+    margin: 4em auto;
+}
+
+#adminShortcuts a {
+    background-color: #349768f0;
+    color: #f7f7f7;
+    margin: 0 2em;
+    padding: 0.8em;
+    border-radius: 0.2em;
 }
 
 #editor {
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 2em auto 6em auto;
 }
 
-#delete-confirmation, .delete-confirmation, .editComment {
+#editor form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#editor input[name=title] {
+    margin-bottom: 2em;
+    width: 50%;
+}
+
+.tox-tinymce {
+    width: 100%;
+    height: 40vmin!important;
+    margin-bottom: 2em;
+}
+
+#editor input:last-of-type {
+    min-width: 10%;
+}
+
+.infosComment {
+    line-height: 1.5em;
+}
+
+.infosComment span, .editComment em, .delete-confirmation em, #delete-confirmation em {
+    color: #FAD02C;
+}
+
+.editComment, .delete-confirmation, #delete-confirmation {
     display: none;
+    line-height: 2em;
+}
+
+.commentArea {
+    width: 50%;
+    margin-bottom: 1em;
+}
+
+.delete-confirmation {
+    color: #E9EAEC;
+}
+
+.inputsComment {
+    display: flex;
+    justify-content: space-between;
+}
+
+#inputsEditPost {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
 }
